removed zindex to prevent open modal background from appearing behind bottom nav

--- a/src/styles/bottom-navigation.scss
+++ b/src/styles/bottom-navigation.scss
@@ -10,7 +10,6 @@
     margin: 0 5px 10px;
     border-radius: 50px;
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25);
-    z-index: 9999;
 
     &.MuiBottomNavigation-root {
       display: none;
